# zk-wordle

./: Cargo.toml
src/: main.rs
