[package]
name = "zk-wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
bincode = "1.3.3"
bls12_381 = "0.8.0"
curve25519-dalek = "4.1.2"
errors = "0.0.0"
ff = "0.13.0"
jubjub = "0.10.0"
merlin = "3.0.0"
pairing = "0.23.0"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
spartan = { version = "0.8.0", default-features = false }
